Update to BPjs 0.12.0